--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ site_title: Introduction to SMSP
 company_name: NHS Digital
 # this appears in the footer
 
-# github_editme_path: tomjohnson1492/documentation-theme-jekyll/blob/gh-pages/pages/
+github_editme_path: /edit/gh-pages/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-disqus_shortname: idrbwjekyll
+disqus_shortname: smsp
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
 host: 127.0.0.1
