--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,9 @@ github_editme_path: /edit/gh-pages/
 disqus_shortname: smsp
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
+gitter: true
+gitter_room: gpconnect/Lobby
+
 host: 127.0.0.1
 # the preview server used. Leave as is.
 
@@ -30,7 +33,7 @@ exclude:
 
 feedback_subject_line: Spine Mini Services
 
-feedback_email: itkaccreditation@nhs.net
+feedback_email: richarddobson@nhs.net
 # used as a contact email for the Feedback link in the top navigation bar
 
 # feedback_disable: true
@@ -100,3 +103,23 @@ description: "Intended as a documentation theme based on Jekyll for technical wr
 
 # needed for sitemap.xml file only
 url: http://idratherbewriting.com
+
+sitemap: true
+
+# needed for sitemap.xml file only
+url: https://dobsonrd.github.io/smsp
+
+repository: dobsonrd/smsp
+
+gist:
+  noscript: false
+
+gems:
+   - jekyll-github-metadata
+   - jekyll-mentions
+   - jemoji
+   - jekyll-redirect-from
+   - jekyll-seo-tag
+   - jekyll-sitemap
+   - jekyll-feed
+   - jekyll-gist
